--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
   <body class="fade-ready">
     <header class="site-header">
       <nav class="nav">
-        <a class="brand accent" href="/index.html">NIKDOR</a>
+        <a class="brand accent" href="/">NIKDOR</a>
         <ul class="nav-list">
           <li><a href="/about" data-link>About</a></li>
           <li><a href="/skills" data-link>Skills</a></li>
