--- a/skills/index.html
+++ b/skills/index.html
@@ -13,7 +13,7 @@
   <body class="fade-ready">
     <header class="site-header">
       <nav class="nav">
-        <a class="brand accent" href="/index.html">NIKDOR</a>
+        <a class="brand accent" href="/">NIKDOR</a>
         <ul class="nav-list">
           <li><a href="/about" data-link>About</a></li>
           <li><a href="/skills" class="active" data-link>Skills</a></li>
@@ -23,8 +23,6 @@
         </ul>
       </nav>
     </header>
-
-    <!-- TODO: add "brand" green hightlight to the skill titles -->
 
     <main class="page page--skills" id="page">
       <h1>Skills</h1>
