Improve home page

--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
     <main class="page page--home" id="page">
       <section class="hero">
         <h1 class="hero-title">Nikita Doronin</h1>
-        <h2 class="hero-subtitle">
-          System programming and software engineering
+
+        <h2 class="hero-roles">
+          System Programmer • Backend Developer • Tools Engineer
         </h2>
 
-        <!-- TODO: improve hero description -->
+        <h2 class="hero-subtitle">
+          I build secure, reliable, and efficient software - from backend
+          platforms to low-level developer tools that empower others.
+        </h2>
 
         <p class="hero-description">
-          I design and develop secure and reliable applications - from backend
-          services to low-level developer tooling.
+          Passionate about performance, systems thinking, and clean
+          architecture, I focus on creating tools that solve real engineering
+          problems. I also freelance in digital operations and video editing,
+          helping creators and small teams optimize their digital workflows.
         </p>
 
         <div class="hero-actions">
@@ -45,6 +51,12 @@
           <a class="btn btn-ghost" href="/about/" data-link>Learn more</a>
         </div>
       </section>
+
+      <div class="tech-badges">
+        <span class="tech-badge">Rust</span>
+        <span class="tech-badge">Java</span>
+        <span class="tech-badge">C++</span>
+      </div>
 
       <section class="stats-row">
         <div class="stat">
@@ -56,8 +68,8 @@
           <div class="label">major projects developed</div>
         </div>
         <div class="stat">
-          <div class="val">100/100</div>
-          <div class="label">National IT exam score</div>
+          <div class="val">3-time</div>
+          <div class="label">National competition winner</div>
         </div>
       </section>
 
@@ -73,6 +85,17 @@
           <a class="link-accent" href="/projects/" data-link>> See details</a>
         </p>
       </section>
+
+      <div class="freelance-card">
+        <p class="freelance-title">Available for freelance work</p>
+        <p class="freelance-desc">
+          Digital operations • Software solutions • Video editing
+        </p>
+
+        <a class="freelance-link" href="/services/" data-link>
+          > Explore Services
+        </a>
+      </div>
 
       <section class="connect">
         <h3>Links</h3>
