--- a/about/index.html
+++ b/about/index.html
@@ -15,16 +15,20 @@
       <nav class="nav">
         <a class="brand accent" href="/">NIKDOR</a>
         <ul class="nav-list">
-          <li><a href="/about" class="active" data-link>About</a></li>
-          <li><a href="/skills" data-link>Skills</a></li>
-          <li><a href="/projects" data-link>Projects</a></li>
-          <li><a href="/achievements" data-link>Achievements</a></li>
-          <li><a href="/services" data-link>Services</a></li>
+          <li class="nav-item active">
+            <a href="/about" data-link>About</a>
+          </li>
+          <li class="nav-item"><a href="/skills" data-link>Skills</a></li>
+          <li class="nav-item"><a href="/projects" data-link>Projects</a></li>
+          <li class="nav-item">
+            <a href="/achievements" data-link>Achievements</a>
+          </li>
+          <li class="nav-item"><a href="/services" data-link>Services</a></li>
         </ul>
       </nav>
     </header>
 
-    <main class="page page--about" id="page">
+    <main class="page page--about">
       <section class="about-intro">
         <h1>About me</h1>
         <p>
