--- a/achievements/index.html
+++ b/achievements/index.html
@@ -15,18 +15,18 @@
       <nav class="nav">
         <a class="brand accent" href="/">NIKDOR</a>
         <ul class="nav-list">
-          <li><a href="/about" data-link>About</a></li>
-          <li><a href="/skills" data-link>Skills</a></li>
-          <li><a href="/projects" data-link>Projects</a></li>
-          <li>
-            <a href="/achievements" class="active" data-link>Achievements</a>
+          <li class="nav-item"><a href="/about" data-link>About</a></li>
+          <li class="nav-item"><a href="/skills" data-link>Skills</a></li>
+          <li class="nav-item"><a href="/projects" data-link>Projects</a></li>
+          <li class="nav-item active">
+            <a href="/achievements" data-link>Achievements</a>
           </li>
-          <li><a href="/services" data-link>Services</a></li>
+          <li class="nav-item"><a href="/services" data-link>Services</a></li>
         </ul>
       </nav>
     </header>
 
-    <main class="page page--achievements" id="page">
+    <main class="page page--achievements">
       <!-- TODO: add actual certificate files/links -->
       <!-- TODO: add certificate image preview -->
       <h1>Achievements & Certificates</h1>
