Improve home page

--- a/index.html
+++ b/index.html
@@ -54,12 +54,6 @@
         </div>
       </section>
 
-      <div class="tech-badges">
-        <span class="tech-badge">Rust</span>
-        <span class="tech-badge">Java</span>
-        <span class="tech-badge">C++</span>
-      </div>
-
       <section class="stats-row">
         <div class="stat">
           <div class="val">3+ years</div>
@@ -75,6 +69,12 @@
         </div>
       </section>
 
+      <div class="tech-badges">
+        <span class="tech-badge">Rust</span>
+        <span class="tech-badge">Java</span>
+        <span class="tech-badge">C++</span>
+      </div>
+
       <section class="current-project small">
         <div class="tag">currently working on</div>
         <h2 class="project-title">Copper <span class="lang">Rust</span></h2>
@@ -87,6 +87,8 @@
           <a class="link-accent" href="./projects/" data-link>> See details</a>
         </p>
       </section>
+
+      <!-- TODO: add "currently learning" card -->
 
       <div class="freelance-card">
         <p class="freelance-title">Available for freelance work</p>
@@ -103,26 +105,26 @@
         <h3>Links</h3>
         <div class="social">
           <a class="social-btn" href="mailto:nikdorkir@gmail.com">
-            <img src="assets/icons/mail.svg" class="social-btn-icon" />
+            <img src="/assets/icons/mail.svg" class="social-btn-icon" />
             Email
           </a>
           <a class="social-btn" href="https://t.me/nikita_ducky">
-            <img src="assets/icons/telegram.svg" class="social-btn-icon" />
+            <img src="/assets/icons/telegram.svg" class="social-btn-icon" />
             Telegram
           </a>
           <a class="social-btn" href="https://github.com/duckysmacky">
-            <img src="assets/icons/github.svg" class="social-btn-icon" />
+            <img src="/assets/icons/github.svg" class="social-btn-icon" />
             GitHub
           </a>
           <a
             class="social-btn"
             href="https://connect.easystaff.io/easylancer/nikdor?ref=yjdkywy"
           >
-            <img src="assets/icons/briefcase.svg" class="social-btn-icon" />
+            <img src="/assets/icons/briefcase.svg" class="social-btn-icon" />
             EasyStaff
           </a>
           <a class="social-btn" href="https://www.linkedin.com/in/nikdor/">
-            <img src="assets/icons/linkedin.svg" class="social-btn-icon" />
+            <img src="/assets/icons/linkedin.svg" class="social-btn-icon" />
             LinkedIn
           </a>
         </div>
