Add more skills, improve styling

--- a/skills/index.html
+++ b/skills/index.html
@@ -30,64 +30,267 @@
 
     <main class="page page--skills">
       <h1>Skills</h1>
-      <p>
-        This page outlines my core technical skills and competencies in software
-        development. These are the areas where I have the most experience and
-        proficiency.
+
+      <p class="section-intro">
+        This page highlights my technical expertise, programming experience, and
+        complementary skills - from backend engineering and system development
+        to freelance capabilities and language proficiency.
       </p>
 
       <div class="skills-grid">
         <div class="skill-card">
           <h3 class="brand accent">Programming Languages</h3>
-          <ul>
-            <li>
-              <strong>Rust</strong><br />
-              CLI tools, bots and automation. My go-to language for new projects
-              and general applications.
-            </li>
-            <li>
-              <strong>Java</strong> - primary language for backend development
-              and REST APIs. The language I am the most proficient with.
-            </li>
-            <li>
-              <strong>C++</strong> - low-level programming, performance-critial
-              projects. The language I want to improve my skills at the most.
-            </li>
-          </ul>
+
+          <div class="skill-item">
+            <div class="skill-name">Rust</div>
+            <div class="skill-desc">
+              CLI tooling, secure systems, automation. It is my go-to language
+              for new projects and general applications (and also my favorite).
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Java</div>
+            <div class="skill-desc">
+              Backend engineering, REST APIs and desktop applications. The
+              language I am most proficient with.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">C++</div>
+            <div class="skill-desc">
+              Low-level development, performance-critical systems. This is the
+              language I want to improve my skills at the most.
+            </div>
+          </div>
         </div>
 
         <div class="skill-card">
-          <h3 class="brand accent">Tools & Platforms</h3>
-          <ul>
-            <li>Git, GitHub - branching, pull requests, CI pipelines</li>
-            <li>Docker, Docker Compose - containerization</li>
-            <li>PostgreSQL, SQL - basic schema design and queries</li>
-            <li>Maven, Gradle, Cargo, Make - build systems</li>
-          </ul>
+          <h3 class="brand accent">Tools & Technologies</h3>
+
+          <div class="skill-item">
+            <div class="skill-name">Git & Github</div>
+            <div class="skill-desc">
+              Branching, pull requests, collaboration and CI pipelines. I use it
+              in all of my projects for version control.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Docker</div>
+            <div class="skill-desc">
+              Docker compose setups, containerization for development and
+              deployment.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Build systems</div>
+            <div class="skill-desc">
+              Maven, Gradle, Cargo, Make - familiar with various build tools
+              across languages.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">SQL (PostgreSQL)</div>
+            <div class="skill-desc">
+              Basic schema design and queries for PostgreSQL databases. Used it
+              in my backend projects.
+            </div>
+          </div>
         </div>
 
         <div class="skill-card">
           <h3 class="brand accent">Frameworks & Ecosystems</h3>
-          <ul>
-            <li>Spring Boot - backend services, REST APIs</li>
-            <li>Tokio - async Rust and advanced IO</li>
-            <li>Windows API - low-level Windows utilities</li>
-          </ul>
+
+          <div class="skill-item">
+            <div class="skill-name">Spring Boot</div>
+            <div class="skill-desc">
+              Experience building backend services and REST APIs with Spring
+              Boot, as well as integrating with databases and security.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">JavaFX</div>
+            <div class="skill-desc">
+              Built desktop applications with JavaFX, focusing on UI design and
+              user experience.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Tokio</div>
+            <div class="skill-desc">
+              Used it for asynchronous programming in Rust and building
+              automated bots.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Windows API</div>
+            <div class="skill-desc">
+              Familiar with low-level Windows programming using the Windows API
+              for building utilities and system tools.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Minecraft Plugins</div>
+            <div class="skill-desc">
+              Experience developing Minecraft server plugins using the Spigot
+              API.
+            </div>
+          </div>
         </div>
 
         <div class="skill-card">
           <h3 class="brand accent">Core Competencies</h3>
-          <ul>
-            <li>Systems programming - pointers, memory, ownership models</li>
-            <li>Backend & API design - REST, CRUD, auth basics</li>
-            <li>Asynchronous programming - concurrency models, async/await</li>
-            <li>
-              Data structures & algorithms - complexity, common patterns, custom
-              implementations
-            </li>
-            <li>Security basics - encryption, secure storage practices</li>
-            <li>Linux (Arch) - shell tooling, system administration</li>
-          </ul>
+
+          <div class="skill-item">
+            <div class="skill-name">Memory model</div>
+            <div class="skill-desc">
+              Understanding of memory management concepts including stack vs
+              heap, pointers, references, and ownership models.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Backend & API design</div>
+            <div class="skill-desc">
+              Experience designing and implementing REST APIs, including
+              routing, data serialization, and authentication.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Data structures & algorithms</div>
+            <div class="skill-desc">
+              Good knowledge of common data structures (linked lists, trees,
+              hash maps and sets, graphs) and algorithms (sorting, searching).
+              Implemented my own versions from scratch.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Multithreading & async</div>
+            <div class="skill-desc">
+              Familiar with concurrent programming concepts, thread safety,
+              synchronization, and asynchronous programming paradigms.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">OOP</div>
+            <div class="skill-desc">
+              Strong understanding of object-oriented programming principles
+              such as encapsulation, inheritance, and polymorphism. My primary
+              paradigm when working with my of languages.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Security basics</div>
+            <div class="skill-desc">
+              Understanding of encryption algorithms, secure storage practices,
+              and basic security principles in software development.
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-card">
+          <h3 class="brand accent">Applications & Platforms</h3>
+
+          <div class="skill-item">
+            <div class="skill-name">IDEs and text editors</div>
+            <div class="skill-desc">
+              Neovim is my primary text editor, but I use JetBrains IDEs like
+              IntelliJ IDEA and RustRover for larger projects.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Linux</div>
+            <div class="skill-desc">
+              Proficient with the command line and common CLI tools for
+              development and system administration. I use Arch Linux on daily
+              basis.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Premiere Pro</div>
+            <div class="skill-desc">
+              Video editing, special effects and sound design. Experienced in
+              using Adobe Premiere Pro for freelance projects.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Photoshop</div>
+            <div class="skill-desc">
+              Image editing, graphic design and photo manipulation. Skilled in
+              using Adobe Photoshop for creating Youtube thumbnails in specific.
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-card">
+          <h3 class="brand accent">Soft Skills</h3>
+
+          <div class="skill-item">
+            <div class="skill-name">Team leadership</div>
+            <div class="skill-desc">
+              Experience leading small teams in project development,
+              coordinating tasks, and driving progress. My favourite role to
+              take.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Self-learner</div>
+            <div class="skill-desc">
+              Strong ability to quickly learn new technologies, programming
+              languages, and frameworks independently. Most of my skills were
+              learned independently by myself.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Workflow Organization</div>
+            <div class="skill-desc">
+              Skilled in organizing digital workflows for efficiency and task
+              management using tools like Trello and Todoist.
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">Passionate</div>
+            <div class="skill-desc">
+              Coding isn't only my job - it's my hobby.
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-card">
+          <h3 class="brand accent">Languages</h3>
+
+          <div class="skill-item">
+            <div class="skill-name">Russian</div>
+            <div class="skill-desc">Native proficiency (C2).</div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">English</div>
+            <div class="skill-desc">Advanced (C1-C2).</div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-name">German</div>
+            <div class="skill-desc">Elementary proficiency (A2-B1).</div>
+          </div>
         </div>
       </div>
     </main>
