Add certificates for the Achievements page

--- a/achievements/index.html
+++ b/achievements/index.html
@@ -27,9 +27,19 @@
     </header>
 
     <main class="page page--achievements">
-      <!-- TODO: add actual certificate files/links -->
-      <!-- TODO: add certificate image preview -->
-      <h1>Achievements & Certificates</h1>
+      <h1>Achievements</h1>
+
+      <p class="section-intro">
+        This page showcases my completed courses and certifications, as well as
+        my achievements in various competitions. These accomplishments reflect
+        my dedication to continuous learning and excellence in my field. You can
+        view each certificate by clicking the "View certificate" buttons below,
+        which open a PDF file.
+      </p>
+
+      <h2>Certificates</h2>
+
+      <!-- TODO: add certificate image/PDF previews -->
 
       <section class="cert-grid">
         <article class="cert-card">
@@ -41,7 +51,7 @@
             </p>
             <a
               class="btn"
-              href="/assets/certificates/placeholder.pdf"
+              href="/assets/certificates/Codecademy Learn Intermediate Java Course completion (03.08.2024) certificate - Nikita Doronin.pdf"
               target="_blank"
               >View certificate</a
             >
@@ -58,7 +68,7 @@
             </p>
             <a
               class="btn"
-              href="/assets/certificates/placeholder.pdf"
+              href="/assets/certificates/Codecademy Learn Spring Course completion (05.08.2024) certificate - Nikita Doronin.pdf"
               target="_blank"
               >View certificate</a
             >
@@ -74,7 +84,7 @@
             </p>
             <a
               class="btn"
-              href="/assets/certificates/placeholder.pdf"
+              href="/assets/certificates/Codecademy Introduction to Cybersecurity Course completion (07.08.2024) certificate - Nikita Doronin.pdf"
               target="_blank"
               >View certificate</a
             >
@@ -84,14 +94,14 @@
         <article class="cert-card">
           <div class="cert-info">
             <strong>Java Course</strong>
-            <div class="meta">Jul 2023 • Codecademy • Certificate</div>
+            <div class="meta">Jun 2023 • Codecademy • Certificate</div>
             <p class="small">
               Core Java concepts: OOP, data structures, error handling and
               design patterns.
             </p>
             <a
               class="btn"
-              href="/assets/certificates/placeholder.pdf"
+              href="/assets/certificates/Codecademy Learn Java Course completion (18.06.2023) certificate - Nikita Doronin.pdf"
               target="_blank"
               >View certificate</a
             >
@@ -101,13 +111,13 @@
         <article class="cert-card">
           <div class="cert-info">
             <strong>C++ Course</strong>
-            <div class="meta">Aug 2022 • Codecademy • Certificate</div>
+            <div class="meta">Jul 2022 • Codecademy • Certificate</div>
             <p class="small">
               Fundamentals of C++: syntax, OOP, pointers and memory management.
             </p>
             <a
               class="btn"
-              href="/assets/certificates/placeholder.pdf"
+              href="/assets/certificates/Codecademy Learn C++ Course completion (29.07.2022) certificate - Nikita Doronin.pdf"
               target="_blank"
               >View certificate</a
             >
