Improve services page

--- a/services/index.html
+++ b/services/index.html
@@ -31,7 +31,24 @@
     <main class="page page--services">
       <h1>Services</h1>
 
-      <!-- TODO: add contant buttons -->
+      <p class="section-intro">
+        In addition to my core expertise in system programming and backend
+        development, I offer a range of freelance services to help creators and
+        small teams optimize their digital workflows and enhance their content.
+        Below are the main services I provide.
+      </p>
+
+      <h2>Freelance Services</h2>
+
+      <!-- TODO: improve subsection intro/information text -->
+
+      <p class="section-intro">
+        I use Easy Staff as my freelance platform to manage orders and recieve
+        payments securely. For orders and inquiries, please visit my EasyStaff
+        profile by clicking the "Order on EasyStaff" buttons below each service
+        description.
+      </p>
+
       <!-- TODO: make cards horizonal or simply bigger -->
       <!-- TODO: add price information -->
 
@@ -84,6 +101,28 @@
           >
         </div>
       </div>
+
+      <h2>Contact me</h2>
+
+      <p class="section-intro">
+        I strongly recommend to reach out to me via my business email or
+        Telegram for any questions regarding my services or to discuss a custom
+        project. This way I can respond to you faster, provide more detailed
+        information about a specific service and discuss your requirements.
+      </p>
+
+      <section class="connect">
+        <div class="social">
+          <a class="social-btn" href="mailto:nikdorkir@gmail.com">
+            <img src="/assets/icons/mail.svg" class="social-btn-icon" />
+            Email
+          </a>
+          <a class="social-btn" href="https://t.me/nikita_ducky">
+            <img src="/assets/icons/telegram.svg" class="social-btn-icon" />
+            Telegram
+          </a>
+        </div>
+      </section>
     </main>
 
     <footer class="site-footer">
